(fix) Fix mobile overflow

--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -1,15 +1,17 @@
 .navbar {
-  background-color:$primary-color;
+  background-color: $primary-color;
   box-shadow: $box-shadow;
-  border:0;
-  border-radius:0;
+  border: 0;
+  border-radius: 0;
 }
 
 .navbar-default .navbar-brand{
-  color:white;
+  color: white;
   font-size: 3rem;
 }
 
 .navbar-form {
-  border:0;
+  border: 0;
+  margin-right: 0;
+  margin-left: 0;
 }
